# yagnidrift

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_drift.py  test_imports.py
yagnidrift/: cli.py  contracts.py  drift.py  git_tools.py  globmatch.py  specs.py  workgraph.py
